--- a/index.html
+++ b/index.html
@@ -143,35 +143,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
     <p>
       The walk home is warm tonight. Sounds of desert life ride upon the whispers of a secret-filled breeze.
       Your senses widen and tingle, drinking in the moonlight and its shadows.
-      Amidst this, you feel absolutely calm - steadied by the sense of ease that comes with walking beside friends through the darkness.
+      The darkness beckons you into its velvety folds, and amidst its embrace you feel an absolute calm. You do not walk alone.
+      You are with your friends. And they too feel the night.
     </p>
 
     <p>
-      The group stumbles back from a night out through Tucson's eroded roads. What a splendid time indeed!
-      Turn right off the main avenue, then left into a chessboard of quiet side streets. In the distance, home greets you with the golden glow of porch lights.
-      As you walk inside, the group collectively slides into a state of happy tiredness. But the night is still young and your body still thrums, so where must you all go?
-      The kitchen, naturally! To you and your friends, this is familiar. Like clockwork, the conversation flows beyond the entryway and convenes around granite island in the middle of the kitchen.
-      You all reccount the events of hours past, each of you sharing your attention and your voice in equal parts. 'What happened next? Tell us, tell us!' you each beg
-      with looks of excitement and anticipation. The mood is incvincible. Exuberance drives the desire to flood the shared space with enthusiasm. And oh what preposterous things you retell!
+      The group stumbles back from a house party through Tucson's eroded roads. What a splendid time indeed!
+      Turn right off the main avenue, then left into a checkerboard of quiet side streets. In the distance, home greets you with the golden glow of porch lights.
+      As you walk inside, everyone collectively slides into a state of happy tiredness. But the night is still young and your body still thrums with rythms of the dancefloor, so where must you all go?
+      The kitchen, naturally! To you and your friends, this routine is familiar. Like clockwork, the conversation flows beyond the entryway and congregates around granite island next to the refrigerator.
+      You all reccount the events of hours past, each of you sharing your attention and your voice in equal parts. 'What happened next? Tell us, tell us!' you each say through
+      looks of excitement and anticipation. The mood is incvincible. Exuberance drives the desire to flood the shared space with enthusiasm. And oh what preposterous things you retell!
       How they leave you folded over in delight, howling with laughter and desparate for breath!
     </p>
 
     <p>
       At some point, and its hard to recall when, a cutting board appeared - its dark wood suffused with the scent of peppery earth and its surface scarred with reminders of past meals.
-      Later it will dawn on you that this board is an incarnation of memory itself - an ongoing history preserved in the cumulative etchings and imperfections.
-      Alongside the cutting board is a large white bowl. There is no need for prompting or coordination. Unconsciously, you and your friends take up knives and get to work.
-      The voices and laughter mingle with the crunching and chopping of vegetables. Like the stories you each tell, the contents of the meal get broken down: synopses and slices.
-      Each ingredient a color. Each cut a detail.
+      Later it will dawn on you that this board is an incarnation of memory itself - an evergrowing history preserved in the cumulative etchings and imperfections.
+      Alongside the cutting board is a large white bowl. Without prompting or coordination, you and your friends take up knives and get to work.
+      Voices and laughter mingle with the crunching and chopping of vegetables. Like the stories you each tell, the contents of the meal get broken down: synopses and slices.
+      Each ingredient a character. Each cut a detail.
 
        "Should we add mango?" one of you asks. But of course, no flavor is unallowed. No ingredient denied (with the exception of bananas).
-       So the group replies "uh fuck yeah" - you are gastronomical explorers after all. "How nuts should we go with the nuts?".
+       So the group replies "oh fuck yeah" - you are gastronomical explorers after all. "How nuts should we go with the nuts?".
        Go as crazy as you'd like. And then add more because those morsels of buttery texture are literal crack.
      </p>
 
      <p>
-     One by one, the ingredients are piled into the bowl. The story is almost complete.
-     But like any story, the constituent parts must work in concert. There must be a unification of these delectable items. A dressing of sorts.
-     And so, with a splash of olive oil and shake of vinegar the midnight salad was born.
+     One by one, the ingredients are piled into the bowl. This story is nearly complete.
+     But like any story, the constituent parts must work in concert. There must be a means of unifying each delectable element. A dressing of sorts.
+     And so, with a splash of olive oil and a shake of vinegar the midnight salad was born.
      </p>
   </div>
 </div>
