updated origin story

--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
       The walk home is warm tonight. Sounds of desert life ride upon the whispers of a secret-filled breeze.
       Your senses widen and tingle, drinking in the moonlight and its shadows.
       The darkness beckons you into its velvety folds, and amidst its embrace you feel an absolute calm. You do not walk alone.
-      You are with your friends. And they too feel the night.
+      You are with your friends. They too feel the night.
     </p>
 
     <p>
-      The group stumbles back from a house party through Tucson's eroded roads. What a splendid time indeed!
-      Turn right off the main avenue, then left into a checkerboard of quiet side streets. In the distance, home greets you with the golden glow of porch lights.
+      The group stumbles back from a house party through Tucson's eroded streets. What a splendid time indeed!
+      Turn right off a main road, then left into a checkerboard of quiet neighborhoods. In the distance, home greets you with the golden glow of porch lights.
       As you walk inside, everyone collectively slides into a state of happy tiredness. But the night is still young and your body still thrums with rythms of the dancefloor, so where must you all go?
-      The kitchen, naturally! To you and your friends, this routine is familiar. Like clockwork, the conversation flows beyond the entryway and congregates around granite island next to the refrigerator.
+      The kitchen, naturally! To you and your friends, this routine is familiar. Like clockwork, the conversation wanders past the entryway and congregates around granite island next to the refrigerator.
       You all reccount the events of hours past, each of you sharing your attention and your voice in equal parts. 'What happened next? Tell us, tell us!' you each say through
-      looks of excitement and anticipation. The mood is incvincible. Exuberance drives the desire to flood the shared space with enthusiasm. And oh what preposterous things you retell!
+      looks of excitement and anticipation. And oh what preposterous things are retold!
       How they leave you folded over in delight, howling with laughter and desparate for breath!
     </p>
 
@@ -170,8 +170,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
      </p>
 
      <p>
-     One by one, the ingredients are piled into the bowl. This story is nearly complete.
-     But like any story, the constituent parts must work in concert. There must be a means of unifying each delectable element. A dressing of sorts.
+     One by one, the ingredients are piled into the bowl.
+     But like any good story, the constituent parts must work in concert. There must be a means of unifying each delectable element. A dressing of sorts.
      And so, with a splash of olive oil and a shake of vinegar the midnight salad was born.
      </p>
   </div>
