--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
       The walk home is warm tonight. Sounds of desert life ride upon the whispers of a secret-filled breeze.
       Your senses widen and tingle, drinking in the moonlight and its shadows.
       The darkness beckons you into its velvety folds, and amidst its embrace you feel an absolute calm. You do not walk alone.
-      You are with your friends. They too feel the night.
+      Your friends are here, and they too feel the night.
     </p>
 
     <p>
